localization, _csrf added

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -1,4 +1,20 @@
-access.denied.exception=Error!<br/>This action is forbidden
+exception.access.denied=Error!<br/>This action is forbidden
 exception.company.duplicate_name_email=Error!<br/>Company with such name and email already present in application!
 exception.users.duplicate_email=Error!<br/>User with this email already present in application!
 user.save=User successfully saved
+user.name=Name
+user.lastname=Last name
+user.email=Email
+user.phone=Phone
+user.company=Company
+user.roles=Roles
+tab.users=Users
+tab.companies=Companies
+tab.reports=Reports
+company.name=Name
+company.email=Email
+company.address=Address
+order.name=Name
+order.date=Date
+order.data=Content
+user.logged=You logged as:  
