--- a/src/main/resources/locale/messages_ru.properties
+++ b/src/main/resources/locale/messages_ru.properties
@@ -1,4 +1,20 @@
-access.denied.exception=Ошибка!<br/>Данное действие запрещено
+exception.access.denied=Ошибка!<br/>Данное действие запрещено
 exception.company.duplicate_name_email=Ошибка!<br/>Компания с таким названием и email уже есть в приложении!
 exception.users.duplicate_email=Ошибка!<br/>Пользователь с такой почтой уже есть в приложении!
 user.save=Пользователь успешно сохранен
+user.name=Имя
+user.lastname=Фамилия
+user.email=Почта
+user.phone=Телефон
+user.company=Компания
+user.roles=Роли
+tab.users=Пользователи
+tab.companies=Компании
+tab.reports=Отчеты
+company.name=Название
+company.email=Почта
+company.address=Адрес
+order.name=Название
+order.date=Дата
+order.data=Содержание
+user.logged=Вы авторизовались как:
